--- a/src/index.css
+++ b/src/index.css
@@ -14,21 +14,21 @@
   user-select: none;
 }
 
+body, html {
+  height: 100%;
+}
+
 body {
   font-family: var(--font-family);
   background-color: var(--bg-color);
   color: var(--text-color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
   margin: 0;
   overflow: hidden;
 }
 
 #root {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
